# factorio-zone-turret

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
factorio_zone_turret/: __init__.py  __main__.py  colors.py  config.py  handlers.py  pi_utils.py  server.py
